@@ -92,10 +92,11 @@ const hasSelectedContent = (editor: Editor): boolean => !editor.selection.isColl
 const cut = (editor: Editor) => (evt: ClipboardEvent) => {
   if (hasSelectedContent(editor)) {
     setClipboardData(evt, getData(editor), fallback(editor), () => {
-      if (Env.browser.isChrome()) {
+      if (Env.browser.isChrome() || Env.browser.isFirefox()) {
         const rng = editor.selection.getRng();
         // Chrome fails to execCommand from another execCommand with this message:
         // "We don't execute document.execCommand() this time, because it is called recursively.""
+        // Firefox 82 now also won't run recursive commands, but it doesn't log an error
         Delay.setEditorTimeout(editor, () => { // detach
           // Restore the range before deleting, as Chrome on Android will
           // collapse the selection after a cut event has fired.
