@@ -14,6 +14,7 @@ Version 5.6.0 (TBD)
     Fixed font size keywords such as `medium` not displaying correctly in font size menus #TINY-6291
     Fixed an issue where some attributes in table cells were not copied over to new rows or columns #TINY-6485
     Fixed incorrectly removing formatting on adjacent spaces when removing formatting on a ranged selection #TINY-6268
+    Fixed the `Cut` menu item not working in the latest version of Firefox #TINY-6615
     Fixed some incorrect types in the new TypeScript declaration file #TINY-6413
     Fixed a regression whereby a fake offscreen selection element was incorrectly created for the editor root node #TINY-6555
     Fixed an issue where menus would incorrectly collapse in small containers #TINY-3321
